<resources>
    <string name="app_name">BlackCube</string>
    <string name="google_WebApiKey">806636567829-c1j6job7r1lqb1sro8vpnimjhtco0okm.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1061621794013774</string>
    <string name="fb_login_protocol_scheme">fb1061621794013774</string>
    <string name="dial_token">253a2d36e8d2494cb0f3975029fa9e09</string>


    <string name="id_S"><u>아이디 찾기</u></string>
    <string name="pass_S"><u>비밀번호 찾기</u></string>
    <string name="login_title">BlackCube Ver1.3</string>
    <string name="login_google">구글</string>
    <string name="login_face">페이스북(공사중)</string>
    <string name="login_kakao">카카오톡(공사중)</string>
    <string name="login_naver">네이버</string>
    <string name="title_activity_drower">DrowerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">AR 전체모드</string>
</resources>
