<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#403a60"
    android:gravity="center"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#e8e9e9"
        android:text="@string/login_title"
        android:textSize="30dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:src="@drawable/login_icon_email"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/login_line_color"
                android:hint="이메일 또는 아이디"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="12dp"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:src="@drawable/login_icon_pass"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/login_line_color"
                android:hint="비밀번호 (6자리 이상)"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="12dp"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:textSize="12dp"
            android:textColor="#c5c7c9"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/login_button_login_line"
            android:text="로그인"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <Button
            android:id="@+id/btn_register"
            android:textSize="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_button_login_line"
            android:text="회원가입"
            android:textColor="#c5c7c9"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#d7d8d9"
                android:text="@string/id_S"/>
            <LinearLayout
                android:layout_width="15dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#d7d8d9"
                android:text="@string/pass_S"/>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
